--- a/ASE/ase/poselib/data/configs/motions_debug.yaml
+++ b/ASE/ase/poselib/data/configs/motions_debug.yaml
@@ -1,11 +1,11 @@
 motions:
   root: "../retarget_npy/"
-  'sample00_rep00':
-    description: diffusion
-    difficulty: 4
-    trim_beg: -1
-    trim_end: -1
-    weight: 1.0
+#  'sample00_rep00':
+#    description: diffusion
+#    difficulty: 4
+#    trim_beg: -1
+#    trim_end: -1
+#    weight: 1.0
   '144_20':
     description: Punch_Sequence
     difficulty: 4
@@ -141,12 +141,12 @@ motions:
     description: "walk, exaggerated stride"
     difficulty: 2
   
-  "142_08":
-    trim_beg: 200
-    trim_end: 876
-    weight: 1.0
-    description: "walk happily"
-    difficulty: 0
+#  "142_08":
+#    trim_beg: 200
+#    trim_end: 876
+#    weight: 1.0
+#    description: "walk happily"
+#    difficulty: 0
   
   "16_36":
     trim_beg: -1
